--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,7 @@ map: #use "<x> <y> <z>" only unless stated otherwise
 
 delays: # in ticks
   ticksPerHalfHungerRegain: 10
+  respawnDuration: 20 #1s, seems reasonable
   spawnProtectionDuration: 10 #500ms, seems reasonable
 
 game:
