Close to a working state

--- a/config.yml
+++ b/config.yml
@@ -5,8 +5,9 @@ map: #use "<x> <y> <z>" only unless stated otherwise
   - 120 10 120
 
 delays: # in ticks
-  ticksPerHalfHungerRegain: 10
+  ticksPerHalfHungerRegain: 10 # multiply by halfHungerLossOnBoost
   respawnDuration: 20 #1s, seems reasonable
+  gunDelayDuration: 50 #2.5s, seems reasonable
   spawnProtectionDuration: 10 #500ms, seems reasonable
 
 game:
