boost, new config, bug fixes, optimizations, clean

--- a/config.yml
+++ b/config.yml
@@ -1,20 +1,13 @@
-map: #use "<x> <y> <z>" only unless stated otherwise
+map: #use "<x> <y> <z>, <yaw> <pitch>"
   world: world
   spawns:
-  - 100 10 100
-  - 120 10 120
-
-delays: # in ticks
-  ticksPerHalfHungerRegain: 10 # multiply by halfHungerLossOnBoost
-  respawnDuration: 20 #1s, seems reasonable
-  gunDelayDuration: 20 #1s, seems reasonable
-  spawnProtectionDuration: 10 #500ms, seems reasonable
+  - 100 10 100, 0 0
+  - 120 10 120, 1 1
 
 game:
   killsForWin: 0 #0 (or less) for unlimited
   maxGameDuration: 180 #in seconds
   maxPlayerCount: 90
-  halfHungerLossOnBoost: 10 # half hunger losses, multiply normal hunger by 2
   broadcastPrefix: "§c[ShootCraft]§r "
   
 lives:
@@ -23,3 +16,15 @@ lives:
   maxLives: 3
   liveOnDoubleKill: true
   liveOnKillStreak: [4, 8, 10, 15] #killstreaks on which you'll get a new life
+
+spawn: # in ticks
+  respawnDuration: 20 #1s, seems reasonable
+  spawnProtectionDuration: 10 #500ms, seems reasonable
+
+boost:
+  halfHungerLossOnBoost: 10 # half hunger losses, multiply normal hunger by 2
+  ticksPerHalfHungerRegain: 10 # multiply by halfHungerLossOnBoost
+  boostTime: 50 #2.5s, seems good
+
+gun:
+  gunDelayDuration: 20 #1s, seems reasonable
